completed data tab (at least for now) and visualising data table with accompanying display code is working for reading in data, selecting using rows by number (slice), variable value (filter), column number and name (select), and relevant combinations. Should work for any data frame loaded into app.

--- a/CSS/main.CSS
+++ b/CSS/main.CSS
@@ -3,6 +3,19 @@ select, select.form-control {
     padding-right: 15px;
 }
 
+input[type = 'text'] {
+    font-family: "Consolas", monospace;
+}
+
+ul#rowVarButton {
+    padding: 0;
+}
+
+ul#rowVarButton li {
+    display: table-cell;
+    vertical-align: middle;
+}
+
 /*.code {
     padding: 20;
     font-family: "Consolas", Monaco, monospace;
